[gd_scene load_steps=8 format=3 uid="uid://dusdfgoow6jr6"]

[ext_resource type="Script" uid="uid://cfrles6k57dlw" path="res://GDDiscord/Godot/Scripts/Networking/server_image_selector.gd" id="1_6txrc"]
[ext_resource type="Texture2D" uid="uid://b2rqfly14thll" path="res://GDDiscord/Assets/ServerIcons/cat.png" id="2_7gesv"]
[ext_resource type="Texture2D" uid="uid://bwe60dbqbc38o" path="res://GDDiscord/icon.svg" id="3_2658r"]
[ext_resource type="Texture2D" uid="uid://dfl17gplv2lqd" path="res://GDDiscord/Assets/ServerIcons/jay.jpg" id="4_65kb1"]
[ext_resource type="Texture2D" uid="uid://k5slq351yr7s" path="res://GDDiscord/Assets/ServerIcons/todo.jpg" id="5_042w3"]
[ext_resource type="Texture2D" uid="uid://d1yjgi08dixhv" path="res://GDDiscord/Assets/ServerIcons/bomb.jpg" id="6_pfu84"]
[ext_resource type="Texture2D" uid="uid://c7of4gepgelob" path="res://GDDiscord/Assets/ServerIcons/texture_ml.png" id="7_tqfj6"]

[node name="WindowPanel" type="Window"]
disable_3d = true
oversampling_override = 1.0
title = "Choose an Image or Import"
initial_position = 1
size = Vector2i(368, 273)
transient = true
exclusive = true
unresizable = true
popup_window = true
script = ExtResource("1_6txrc")

[node name="FileDialog" type="FileDialog" parent="."]
oversampling_override = 1.0
title = "Open a File"
position = Vector2i(0, 36)
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.jpeg", "*.jpg", "*.svg")
use_native_dialog = true

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Choose 1 file as the Server Icon for your server
or import one from your pc"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ImageList" type="ItemList" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
item_count = 6
max_columns = 4
same_column_width = true
fixed_column_width = 80
icon_mode = 0
fixed_icon_size = Vector2i(48, 48)
item_0/text = "Godot"
item_0/icon = ExtResource("3_2658r")
item_1/text = "Cat"
item_1/icon = ExtResource("2_7gesv")
item_2/text = "Jay"
item_2/icon = ExtResource("4_65kb1")
item_3/text = "Todo"
item_3/icon = ExtResource("5_042w3")
item_4/text = "Boom"
item_4/icon = ExtResource("6_pfu84")
item_5/icon = ExtResource("7_tqfj6")

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="ImportButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Import"

[node name="SelectButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Select"
